--- a/site-src/implementations/v1.2.md
+++ b/site-src/implementations/v1.2.md
@@ -16,12 +16,16 @@ Implementations only appear in this page if they pass Core conformance for the r
 
 ### HTTPRoute
 
-| Organization   | Project                       | Version               | Mode        | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
-|:---------------|:------------------------------|:----------------------|:------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
-| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
-| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
-| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
-| istio          | istio                         | 1.24.0-alpha.0        | default     | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| Organization   | Project                       | Version               | Mode        | GatewayPort8080    | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRewrite   | HTTPRouteQueryParamMatching   | HTTPRouteResponseHeaderModification   | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayStaticAddresses   | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRoutePathRedirect   | HTTPRoutePortRedirect   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteSchemeRedirect   | HTTPRouteParentRefPort   |
+|:---------------|:------------------------------|:----------------------|:------------|:-------------------|:-----------------------|:--------------------------|:-----------------------|:------------------------------|:--------------------------------------|:-------------------------------|:-----------------------------------|:-------------------------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:------------------------|:------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------|:-------------------------|
+| Kong           | gateway-operator              | v1.4.0                | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
+| Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :x:                     | :x:                      | :x:                               | :x:                       | :x:                       | :x:                      |
+| cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :x:                      |
+| envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| istio          | istio                         | 1.24                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:             | :white_check_mark:                 | :white_check_mark:       | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:        | :white_check_mark:       |
+| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :x:                     | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| solo.io        | gloo-gateway                  | v1.18.0               | default     | :x:                | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :x:                           | :x:                                 | :x:                                         | :x:                       | :x:                                | :white_check_mark:      | :white_check_mark:      | :white_check_mark:       | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
+| traefik        | traefik                       | v3.2                  | default     | :white_check_mark: | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :white_check_mark:            | :white_check_mark:                    | :x:                            | :x:                                | :x:                      | :white_check_mark:            | :white_check_mark:                  | :x:                                         | :x:                       | :white_check_mark:                 | :white_check_mark:      | :white_check_mark:      | :x:                      | :x:                               | :x:                       | :white_check_mark:        | :x:                      |
 
 ### GRPCRoute
 
@@ -30,21 +34,25 @@ Implementations only appear in this page if they pass Core conformance for the r
 | Kong           | kubernetes-ingress-controller | v3.2.0-244-gea4944bb0 | expressions | :x:                            | :x:                                | :x:                | :x:                      |
 | cilium         | cilium                        | v1.17.0-pre.1         | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
 | envoyproxy     | envoy-gateway                 | v1.2.0-rc.1           | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio                         | 1.24.0-alpha.0        | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio          | istio                         | 1.24                  | default     | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| nginxinc       | nginx-gateway-fabric          | v1.5.0                | default     | :x:                            | :x:                                | :x:                | :x:                      |
+| traefik        | traefik                       | v3.2                  | default     | :x:                            | :x:                                | :x:                | :x:                      |
 
 ### TLSRoute
 
-| Organization   | Project       | Version        | Mode    | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
-|:---------------|:--------------|:---------------|:--------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
-| cilium         | cilium        | v1.17.0-pre.1  | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| envoyproxy     | envoy-gateway | v1.2.0-rc.1    | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
-| istio          | istio         | 1.24.0-alpha.0 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| Organization   | Project              | Version       | Mode    | GatewayHTTPListenerIsolation   | GatewayInfrastructurePropagation   | GatewayPort8080    | GatewayStaticAddresses   |
+|:---------------|:---------------------|:--------------|:--------|:-------------------------------|:-----------------------------------|:-------------------|:-------------------------|
+| cilium         | cilium               | v1.17.0-pre.1 | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| envoyproxy     | envoy-gateway        | v1.2.0-rc.1   | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| istio          | istio                | 1.24          | default | :white_check_mark:             | :white_check_mark:                 | :white_check_mark: | :white_check_mark:       |
+| nginxinc       | nginx-gateway-fabric | v1.5.0        | default | :x:                            | :x:                                | :x:                | :x:                      |
+| traefik        | traefik              | v3.2          | default | :x:                            | :x:                                | :x:                | :x:                      |
 
 ## Mesh Profile
 
 ### HTTPRoute
 
-| Organization   | Project   | Version        | Mode    | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRedirect   | HTTPRoutePathRewrite   | HTTPRoutePortRedirect   | HTTPRouteQueryParamMatching   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | MeshClusterIPMatching   | HTTPRouteParentRefPort   | MeshConsumerRoute   |
-|:---------------|:----------|:---------------|:--------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:-----------------------|:--------------------------|:------------------------|:-----------------------|:------------------------|:------------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:--------------------------|:------------------------|:-------------------------|:--------------------|
-| cilium         | cilium    | v1.17.0-pre.1  | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :x:                      | :x:                 |
-| istio          | istio     | 1.24.0-alpha.0 | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :x:                     | :white_check_mark:       | :white_check_mark:  |
+| Organization   | Project   | Version       | Mode    | HTTPRouteBackendProtocolH2C   | HTTPRouteBackendProtocolWebSocket   | HTTPRouteBackendRequestHeaderModification   | HTTPRouteBackendTimeout   | HTTPRouteDestinationPortMatching   | HTTPRouteHostRewrite   | HTTPRouteMethodMatching   | HTTPRoutePathRedirect   | HTTPRoutePathRewrite   | HTTPRoutePortRedirect   | HTTPRouteQueryParamMatching   | HTTPRouteRequestMirror   | HTTPRouteRequestMultipleMirrors   | HTTPRouteRequestTimeout   | HTTPRouteResponseHeaderModification   | HTTPRouteSchemeRedirect   | MeshClusterIPMatching   | HTTPRouteParentRefPort   | MeshConsumerRoute   |
+|:---------------|:----------|:--------------|:--------|:------------------------------|:------------------------------------|:--------------------------------------------|:--------------------------|:-----------------------------------|:-----------------------|:--------------------------|:------------------------|:-----------------------|:------------------------|:------------------------------|:-------------------------|:----------------------------------|:--------------------------|:--------------------------------------|:--------------------------|:------------------------|:-------------------------|:--------------------|
+| cilium         | cilium    | v1.17.0-pre.1 | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :x:                      | :x:                 |
+| istio          | istio     | 1.24          | default | :white_check_mark:            | :white_check_mark:                  | :white_check_mark:                          | :white_check_mark:        | :white_check_mark:                 | :white_check_mark:     | :white_check_mark:        | :white_check_mark:      | :white_check_mark:     | :white_check_mark:      | :white_check_mark:            | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        | :white_check_mark:                    | :white_check_mark:        | :x:                     | :white_check_mark:       | :white_check_mark:  |
